--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.2",
     "json-server": "^1.0.0-beta.1",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "5.1.2",
+    "sonner": "^1.5.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
